--- a/opencl-src/isolated-layers/conv/Makefile
+++ b/opencl-src/isolated-layers/conv/Makefile
@@ -1,6 +1,6 @@
 all:host_layer.c
-	gcc -I/usr/local/include host_layer.c load_kernel.c -o layers -lm -lOpenCL -O3 /usr/local/lib/libpapi.a
-	./layers
+	gcc -I/usr/local/include host_layer.c load_kernel.c conv_layer_weight.c -o conv -lm -lOpenCL -O3 /usr/local/lib/libpapi.a
+	./conv
 
 clean:host_layer.c
-	rm -rf layers
+	rm -rf conv
