4 labs are setup

--- a/opencl-src/fpga/Makefile
+++ b/opencl-src/fpga/Makefile
@@ -1,7 +1,11 @@
 all:
 	sdaccel compile_conv.tcl
+lab:
+	sdaccel -source fpga_opencl_lab.tcl
 clean:
 	rm -f sdaccel*
 	rm -rf simple_conv
 	rm -rf .Xil
+	rm -rf conv_lab
+	rm -rf fpga_output.pgm
 
