--- a/opencl-src/mnist/Makefile
+++ b/opencl-src/mnist/Makefile
@@ -1,7 +1,7 @@
 all: mnistcpu mnistgpu mnistfpga	
 
 mnistfpga:
-	gcc -DDEVICE_ACC host_mnist_fpga.c load_kernel.c lenet5_model.c -g -o mnistfpga -lm -lOpenCL -O3 -lpapi
+	gcc -DDEVICE_ACC -I${XILINX_SDACCEL}/runtime/inc host_mnist_fpga.c load_kernel.c lenet5_model.c -g -o mnistfpga -lm -L${XILINX_SDACCEL}/runtime/lib/x86_64 -lxilinxopencl -O3 -lpapi
 
 mnistcpu:
 	gcc host_mnist.c load_kernel.c lenet5_model.c -g -o mnistcpu -lm -lOpenCL -O3 -lpapi
