why use local work group for softmax?

--- a/opencl-src/alexnet-altera/Makefile
+++ b/opencl-src/alexnet-altera/Makefile
@@ -82,6 +82,8 @@ $(TARGET_DIR) :
 	$(ECHO)mkdir $(TARGET_DIR)
 emu: $(TARGET_DIR)/$(TARGET)
 	CL_CONTEXT_EMULATOR_DEVICE_ALTERA=1 $(TARGET_DIR)/$(TARGET) -model=../../../models/alexnet_full_precision_iter_140112.npz
+run: $(TARGET_DIR)/$(TARGET)
+	$(TARGET_DIR)/$(TARGET) -model=../../../models/alexnet_full_precision_iter_140112.npz
 # Standard make targets
 clean :
 	$(ECHO)rm -f $(TARGET_DIR)/$(TARGET)
