Updated to run on HASS server

--- a/opencl-src/cpu-labs/lab1/Makefile
+++ b/opencl-src/cpu-labs/lab1/Makefile
@@ -1,7 +1,10 @@
 include sources.mk
 CC=gcc
 CFLAGS= -g -O3
-LIBS= -framework OpenCL 
+LIBS= OpenCL
+INCS=$(wildcard *.h*)
+LIB_DIRS= /opt/intel/opencl
+INC_DIRS= /opt/intel/opencl/include
 
 exec=lab1_app
 
@@ -9,7 +12,9 @@ all:$(exec)
 
 $(exec):$(C_SRCS)
 	@echo Building....
-	$(CC) $(CFLAGS) $(C_SRCS) -o $(exec) $(LIBS)
+	$(CC) $(CFLAGS) $(C_SRCS) -o $(exec) $(INCS) \
+	$(foreach D,$(INC_DIRS),-I$D) $(foreach D,$(LIB_DIRS),-L$D) \
+	$(foreach L,$(LIBS),-l$L)
 
 run:$(exec)
 	./$(exec) ../../../imgs/mnist_test_img_0.pgm
