--- a/opencl-src/cpu-labs/lab0/Makefile
+++ b/opencl-src/cpu-labs/lab0/Makefile
@@ -19,6 +19,9 @@ $(exec):$(C_SRCS)
 run:$(exec)
 	./$(exec) ../../../imgs/mnist_test_img_0.pgm
 
+pyrun:$(exec)
+	python host_app.py ../../../imgs/mnist_test_img_0.pgm
+
 print:
 	@echo "C_SRCS = $(C_SRCS)"
 	@echo "C_FLAGS = $(CFLAGS)"
