Several small fixes
- Added PuOpenCL ctx to Makefile
- Split PyOpenCL kernel args and kernel launch
- Added trials loop to c and python

--- a/opencl-src/cpu-labs/lab0/Makefile
+++ b/opencl-src/cpu-labs/lab0/Makefile
@@ -20,7 +20,7 @@ run:$(exec)
 	./$(exec) ../../../imgs/mnist_test_img_0.pgm
 
 pyrun:$(exec)
-	python host_app.py ../../../imgs/mnist_test_img_0.pgm
+	PYOPENCL_CTX=2 python host_app.py ../../../imgs/mnist_test_img_0.pgm
 
 print:
 	@echo "C_SRCS = $(C_SRCS)"
